Tudo pronto, resta apenas JS

--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,13 +1,14 @@
-.bg{
-    background-image: url(../Image_Blizzard/bg-diablo4_1920.jpg);
-    background-repeat: no-repeat;
-    background-position: bottom center;
-    background-size: cover;
-    
-}
+
 header{
     height: 9.6rem;
-    border-bottom:1px solid rgba($color: white, $alpha: 0.1);
+    border-bottom:1.5px solid rgba($color: white, $alpha: 0.1);
+    position: absolute;
+    z-index: 20;
+    width: 100%;
+    top: 0;
+    left: 0;
+    
+    
    
     
     .container{
@@ -17,15 +18,31 @@ header{
         .logo-nav{
             display: flex;
             align-items: center;
+            height: 100%;
             gap: 11.23rem;
-            .logo{
-                width: 11.5rem;
+            .logo-a{
+                position: relative;
+                height: 100%;
+                .logo{
+                    width: 11.5rem;
+                }
+                &::after{
+                    content: "";
+                        width: 4.3rem;
+                        border-top:0.19rem solid #00AEFF;
+                        position: absolute;
+                        bottom: -0.2rem;
+                }
+
             }
+            
         }
         
         nav{
             gap: 3.4rem;
             display: flex;
+            
+            
             a{
                 gap: 1.4rem;
                 img{
@@ -37,21 +54,19 @@ header{
                 }
             }
         }
-        ul{
+        .right{
             
             gap: 1.6rem;
             display: flex;
             img{
                 width: 100%;
-                height: 100%;
-                padding-right: 0.631rem;
+                height: max-content;
+                
             }
             #conta{
                 background: none;
                 border: white 1px solid;
-                span{
-                    background: none;
-                }
+                
                 &:hover{
                     background-color: white;
                     span{
@@ -60,33 +75,155 @@ header{
                     
                 }
             }
+            #logar{
+                gap: 0.6rem;
+
+            }
         }
     }
-}
+    @media (min-width:1100px){
+        .menu{
+            display: none;
+        }
+    }
+
+    @media (max-width:1100px) {
+        .logo{
+            width: 8.6rem!important;
+        }
+        nav{
+           a{
+            display: none;
+             gap: 0rem;
+           }
+        }
+        
+    }
+    @media (max-width:722px) {
+        height: 8rem;
+        .logo{
+            width: 6.9rem!important;
+        }
+        .right{
+           
+            a{
+                display: none;
+            }
+        }
+    }
+        
+    }
+       
+    
+
 
 #s-main{
     
-    height: 64rem;
+    height: 73.6rem;
+    
+    #swiper_nav{
+        
+        position: absolute;
+        right: 0;
+        left: 0;
+        
+        max-height: 73.6rem;
+        .d-left{
+            position: absolute;
+            z-index: 10;
+           
+        }
+        
+        ul{
+            
+            gap: 2rem;
+            display: flex;
+            flex-direction: column;
+            justify-content:flex-end ;
+        }
+    }
+    .swiper_container{
+        z-index: 1;
+        height: 100%;
+        max-height: 73.6rem;
+        left: 0;
+        right: 0;
+
+        
+        position: relative;
+        @media (max-width:1100px) {
+            background-position-x:40% ;
+        }
+        
+        @media (max-width:722px){
+            background-position-x: 30%;
+        
+    }
+       
+    }
+    #swiper_diablo4{
+        background-image: url(../Image_Blizzard/bg-diablo4_1920.jpg);
+        background-repeat: no-repeat;
+        background-position: bottom center;
+        background-size: cover;
+        @media (max-width:1100px) {
+            background-position-x:40% ;
+        }
+        
+        @media (max-width:722px){
+            background-position-x: 30%;
+        
+    }
+    }
+    
+    #swiper_hearthstone{
+        background-image: url(../Image_Blizzard/bg-Heartstone.jpg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover; 
+        @media (max-width:1100px) {
+            h1{
+                max-width: 51rem;
+            }
+        }
+
+    }
+
+    #swiper_wow{
+        background-image: url(../Image_Blizzard/bg-WoW.jpg);
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover; 
+        @media (max-width:1100px) {
+            background-position: center center;
+            h1{
+                width: 60rem;
+            }
+        }
+        @media (max-width:722px){
+            h1{
+                max-width: 33.5rem;
+            }
+        }
+    }
+    
     .container{
         display: flex;
         align-items: center;
         justify-content: space-between;
-        .d-left-mid{
-            
-            display: flex;
-            gap: 17.4rem;
-            .d-left{
-                display: flex;
-                ul{
-                    gap: 2rem;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content:flex-end ;
-                }
-            }
+        position: relative;
+        padding-top: 9.6rem;
+        #d4_main{
+            padding: 0;
+        }
+        #hearthstone_main{
+            padding: 0;
+        }
+        
             .d-mid{
                 max-width:56.2rem;
                 padding-bottom: 1.4rem;
+                margin-left: 17.4rem;
                 p{
                     padding-top: 1.6rem;
                     padding-bottom: 3.2rem;
@@ -98,16 +235,26 @@ header{
                     letter-spacing: -0.005em;
                 }
                 a{
-                    padding: 14px 32px;
-                    
+                    img{
+                        width: max-content;
+                        height: 100%;
+                    }
+                    padding: 1.4rem 3.2rem;
+                    gap: 1.2rem;
+                    font-weight: 600;
+                    font-size: 1.6rem;
+                    line-height: 2.4rem;
                 }
         }
-        }
+        
         .d-right{
             height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            .big_icon{
+                max-width:280px ;
+            }
             .trailer{
                 display: flex;
                 flex-direction: column;
@@ -123,18 +270,123 @@ header{
             .trailer-thumb{
                 display: flex;
                 flex-direction: row-reverse;
-            button{
+                position: relative;
+                box-shadow: 0px 20px 15px -5px rgba(0, 0, 0, 0.4);
                 
+                
+            button{
+                cursor: pointer;
+                width: 100%;
+                height: 100%;
                 background: none;
                 border: none;
-                position: relative;
-                left: 16.6rem;
+                position: absolute;
+                img{
+                    margin: 0 auto;
+                    
+                }
+                .b-hover{
+                    
+                    visibility: hidden;
+                    opacity: 0;
+                    transition: visibility 0.2s, opacity 0.3s linear;
+                }
+            }
+            .gifs{
+                    width: 28rem;
+                    min-height: 15.8rem;
+                    position: absolute;
+                    visibility: hidden;
+                    transition: visibility 0.2s, opacity 0.3s linear;
+                    opacity: 0;
                 
+            }
 
+            &:hover{
+                .thumb{
+                    
+                    
+                }
+                .gifs{
+                    visibility: visible;
+                    transition: visibility 0.3s, opacity 0.3s linear;
+                    opacity: 1;
+                }
+                
+                .b-hover{
+                    opacity: 1;
+                    visibility: visible;
+                    transition: visibility 0.3s, opacity 0.3s linear;
+                }
+
+            
             }
         }
         }
         }
+    }
+    @media (max-width:1100px){
+        
+            
+            .d-left{
+                display: flex;
+                position: absolute;
+                bottom: 10.2rem;
+                
+                ul{
+                    gap: 2rem;
+                    display: flex;
+                    flex-direction: row!important;
+                    
+                    justify-content:flex-end ;
+                }
+            }
+        
+        .d-mid{
+            margin-left: 0!important;
+            height: 100%;
+            padding-top: 9.4rem;
+        }
+        .d-right{
+            
+            position: absolute;
+            right: 0rem;
+            justify-content: space-between!important;
+            padding-bottom: 8.6rem;
+            padding-top: 3.2rem;
+            margin-right: 3rem;
+            
+        }
+    }
+    @media (max-width:722px) {
+        max-height: 62.5rem;
+        .container{
+            padding-top: 8rem;
+        }
+        #swiper_nav{
+            max-height: 62.5rem; 
+        }
+        .d-left{
+            bottom: 6.2rem!important;
+        }
+        
+        .d-mid{
+            padding-top: 5.1rem;
+            h1{
+                font-size: 4rem;
+                line-height: 110.2%;
+            }
+        }
+        .d-right{
+            img{
+                display: none;
+            }
+            span{
+                display: none;
+            }
+        }
+        
+        
     }
 }
 
@@ -169,13 +421,39 @@ header{
         .ver_todos{
             display: flex;
             gap: 1rem;
-            font-weight: 600;
-            font-size: 1.6rem;
-            line-height: 2.4rem;
             
-            color: #00AEFF;
+            span{
+                font-weight: 600;
+                font-size: 1.6rem;
+                line-height: 2.4rem;
+                color: #00AEFF;
+            }
+            
 
 
+        }
+        @media  (max-width:1100px) {
+            .t-cards-left{
+                span{
+                    display: none;
+                }
+            }
+            
+        }
+        @media (max-width:722px){
+            .t-cards-left{
+                width: auto;
+                ul{
+                    display: none;
+                }
+            }
+            .ver_todos{
+                span{
+                    
+                    font-size: 14px;
+                    line-height: 21px;
+                }
+            }
         }
     }
 
@@ -186,43 +464,153 @@ header{
         gap: 2.8rem;
         padding-bottom: calc(10.7rem - 3.7rem);
         
+        @media (max-width:1270px) {
+            grid-template-areas: 'card-games card-games card-games';
+        }
+        @media (max-width:722px){
+            grid-template-areas: 'card-games card-games';
+            gap: 1.3rem;
+        }
     }
+    
 }
 
 #s-download{
+    background-image: url(../Image_Blizzard/background-section-download.png);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+    overflow: hidden;
     .container{
+        position: relative;
         display: flex;
+        align-items: center;
+        height: 85.2rem;
+        max-height: 85.2rem;
+        
         
         .left{
+            z-index: 99;
+            width: auto;
+            height: 100%;
+            max-width: 39.3rem;
             display: flex;
             flex-direction: column;
-            
+            align-items: flex-start;
+            padding-top: 132px;
+           
             img{
                 width: fit-content;
             }
+            h2{
+                
+                padding-top: 3rem;
+                padding-bottom: 3rem;
+            }
             ul{
+                display: flex;
+                flex-direction: column;
+                gap: 2.4rem;
+                
                 li{
                     display: flex;
+                    align-items: flex-end;
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 178.2%;
+                    color: #828792;
+                    gap: 16px;
+                    
+                }
+                
+            }
+            a{
+                
+                gap: 1rem;
+                font-weight: 600;
+                font-size: 1.6rem;
+                line-height: 2.4rem;
+                margin-bottom: 4.9rem;
+                margin-top: 4.2rem;
+                padding: 14px 32px;
+            }
+            .d-app{
+                display: flex;
+                gap: 1.8rem;
+               
+                p{
+                    font-weight: 600;
+                    font-size: 1.4rem;
+                    line-height: 2.1rem;
+                    color: #E5E5E5;
+                    flex-direction: column;
+                    a{
+                        font-weight: 600;
+                        font-size: 1.4rem;
+                        margin: 0;
+                        padding: 0;
+                        text-decoration: underline;
+                        transition: 0.2s;
+                        &:hover{
+                            color: #00AEFF;
+                            transition: 0.3s;
+                        }
+                    }
                 }
             }
         }
         .floats{
-            width: 100%;
             display: flex;
-            position: relative;
-            justify-content: flex-end;
-            flex-wrap: wrap;
+            align-items: center;
+            height: 85.2rem;
+            max-width: 105.5rem;
+            width: 100%;
+            position:absolute;
+            right: -27.5rem;    
+            
+            
+            
             img{
-                width: 100%;
-                
-                position: relative;
-                overflow: hidden;
+                position: absolute;
             }
-            .float-2{
-                align-self: flex-end;
-                overflow: hidden;
-                position: relative;
+            .img1{
+                    animation: float 8s ease-in-out infinite; 
+                    
+            }
+               
+            .img2{
+                    display: block;
+                    animation: float 6s ease-in-out infinite; 
+                    left: 29.3rem;
+                    top: 436.5px;
+            }
+
+            }
+        }
+
+        @media (max-width:1100px) {
+            .left{
+                max-width: 30.3rem!important;
+        }
+        @media (max-width:722px){
+            
+            .container{
+                min-height: 94.4rem;
+                .left{
+                    padding-top: 6.3rem;
+                }
+            }
+            .floats{
+                right: 0!important;
+                top: 330px;
+                .img1{
+                    max-width: 52.882rem;
+                }
+                .img2{
+                    max-width: 27.622rem;
+                    left: 11.3rem!important;
+                }
             }
         }
     }
-}
+    }
