--- a/scss/_pattern.scss
+++ b/scss/_pattern.scss
@@ -4,6 +4,17 @@
     max-width: 133rem;
     padding: 0 1.5rem;
     margin: 0 auto;
+    @media (max-width:1440px) {
+        max-width:125rem;
+    }
+    @media (max-width:1100px) {
+        max-width:76.8rem;
+        padding: 0 3rem;
+    }
+    @media (max-width:722px){
+        max-width:375px;
+        padding: 0 1.6rem;
+    }
 }
 
 img{
@@ -21,6 +32,9 @@ h2{
     font-weight: 700;
     font-size: 3.2rem;
     line-height: 110.2%;
+    @media (max-width:722px){
+        font-size: 28px;
+    }
 }
 
 h3{
@@ -28,7 +42,9 @@ h3{
     font-weight: 600;
     font-size: 1.935rem;
     line-height: 2.9rem;
-
+@media (max-width: 1100px) {
+    font-size: 16px;
+}
 }
 
 
@@ -83,8 +99,6 @@ a{
         max-width: fit-content;
         max-width: 30.1rem;
         max-height: 41.28rem;
-        min-width: 30.1rem;
-        
         img{
             transition:0.3s ease-in;
             width: 100%;
@@ -100,6 +114,7 @@ a{
         align-items: center;
         flex-direction: column;
         justify-content: center;
+        
         width: 30.1rem;
         height: 41.28rem;
         gap: 3.6rem;
@@ -136,5 +151,57 @@ a{
 
         }
 
+    }
+    @media  (max-width:1440px)  {
+        max-width: 28rem;
+        min-width:28rem;
+        .last-card{
+            max-width: 28rem;
+            width:28rem;
+            max-height: 38.5rem;
+        }
+    }
+    @media (max-width:1270px){
+        max-width: 30.1rem;
+        .last-card{
+            max-width: 30.1rem;
+            min-width: 30.1rem;
+            max-height: 41.3rem;
+        }
+    }
+    @media (max-width:1100px){
+        
+        min-width: 20.1rem;
+        .last-card{
+            min-width: 20.1rem;
+            
+            max-width: 21.7rem;
+            max-height: 29.8rem;
+            
+        }
+    }
+    @media (max-width:722px){
+        max-width: 15.6rem;
+        min-width: 15.6rem;
+        .game-info{
+            display: none;
+        }
+        .last-card{
+            max-width: 15.6rem;
+            min-width: 15.6rem;
+            max-height: 21.2rem;
+            img{
+                width: 50%;
+            }
+
+            .ver_todos_last_card{
+                img{
+                    display: none;
+                }
+                span{
+                    font-size: 14px!important;
+            }
+        }
+        }
     }
 }
