--- a/scss/main.css
+++ b/scss/main.css
@@ -23,6 +23,23 @@ body {
   padding: 0 1.5rem;
   margin: 0 auto;
 }
+@media (max-width: 1440px) {
+  .container {
+    max-width: 125rem;
+  }
+}
+@media (max-width: 1100px) {
+  .container {
+    max-width: 76.8rem;
+    padding: 0 3rem;
+  }
+}
+@media (max-width: 722px) {
+  .container {
+    max-width: 375px;
+    padding: 0 1.6rem;
+  }
+}
 
 img {
   display: block;
@@ -39,11 +56,21 @@ h2 {
   font-size: 3.2rem;
   line-height: 110.2%;
 }
+@media (max-width: 722px) {
+  h2 {
+    font-size: 28px;
+  }
+}
 
 h3 {
   font-weight: 600;
   font-size: 1.935rem;
   line-height: 2.9rem;
+}
+@media (max-width: 1100px) {
+  h3 {
+    font-size: 16px;
+  }
 }
 
 a {
@@ -96,7 +123,6 @@ a {
   max-width: fit-content;
   max-width: 30.1rem;
   max-height: 41.28rem;
-  min-width: 30.1rem;
 }
 .card-games .imagem img {
   transition: 0.3s ease-in;
@@ -138,17 +164,69 @@ a {
   transform: scale(1.1);
   transition: 0.3s ease-in;
 }
-
-.bg {
-  background-image: url(../Image_Blizzard/bg-diablo4_1920.jpg);
-  background-repeat: no-repeat;
-  background-position: bottom center;
-  background-size: cover;
+@media (max-width: 1440px) {
+  .card-games {
+    max-width: 28rem;
+    min-width: 28rem;
+  }
+  .card-games .last-card {
+    max-width: 28rem;
+    width: 28rem;
+    max-height: 38.5rem;
+  }
+}
+@media (max-width: 1270px) {
+  .card-games {
+    max-width: 30.1rem;
+  }
+  .card-games .last-card {
+    max-width: 30.1rem;
+    min-width: 30.1rem;
+    max-height: 41.3rem;
+  }
+}
+@media (max-width: 1100px) {
+  .card-games {
+    min-width: 20.1rem;
+  }
+  .card-games .last-card {
+    min-width: 20.1rem;
+    max-width: 21.7rem;
+    max-height: 29.8rem;
+  }
+}
+@media (max-width: 722px) {
+  .card-games {
+    max-width: 15.6rem;
+    min-width: 15.6rem;
+  }
+  .card-games .game-info {
+    display: none;
+  }
+  .card-games .last-card {
+    max-width: 15.6rem;
+    min-width: 15.6rem;
+    max-height: 21.2rem;
+  }
+  .card-games .last-card img {
+    width: 50%;
+  }
+  .card-games .last-card .ver_todos_last_card img {
+    display: none;
+  }
+  .card-games .last-card .ver_todos_last_card span {
+    font-size: 14px !important;
+  }
 }
 
 header {
   height: 9.6rem;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  border-bottom: 1.5px solid rgba(255, 255, 255, 0.1);
+  position: absolute;
+  z-index: 20;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 header .container {
   display: flex;
@@ -158,10 +236,22 @@ header .container {
 header .container .logo-nav {
   display: flex;
   align-items: center;
+  height: 100%;
   gap: 11.23rem;
 }
-header .container .logo-nav .logo {
+header .container .logo-nav .logo-a {
+  position: relative;
+  height: 100%;
+}
+header .container .logo-nav .logo-a .logo {
   width: 11.5rem;
+}
+header .container .logo-nav .logo-a::after {
+  content: "";
+  width: 4.3rem;
+  border-top: 0.19rem solid #00AEFF;
+  position: absolute;
+  bottom: -0.2rem;
 }
 header .container nav {
   gap: 3.4rem;
@@ -177,55 +267,157 @@ header .container nav a img {
   height: -moz-fit-content;
   height: fit-content;
 }
-header .container ul {
+header .container .right {
   gap: 1.6rem;
   display: flex;
 }
-header .container ul img {
+header .container .right img {
   width: 100%;
-  height: 100%;
-  padding-right: 0.631rem;
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
 }
-header .container ul #conta {
+header .container .right #conta {
   background: none;
   border: white 1px solid;
 }
-header .container ul #conta span {
-  background: none;
-}
-header .container ul #conta:hover {
+header .container .right #conta:hover {
   background-color: white;
 }
-header .container ul #conta:hover span {
+header .container .right #conta:hover span {
   color: black;
+}
+header .container .right #logar {
+  gap: 0.6rem;
+}
+@media (min-width: 1100px) {
+  header .menu {
+    display: none;
+  }
+}
+@media (max-width: 1100px) {
+  header .logo {
+    width: 8.6rem !important;
+  }
+  header nav a {
+    display: none;
+    gap: 0rem;
+  }
+}
+@media (max-width: 722px) {
+  header {
+    height: 8rem;
+  }
+  header .logo {
+    width: 6.9rem !important;
+  }
+  header .right a {
+    display: none;
+  }
 }
 
 #s-main {
-  height: 64rem;
+  height: 73.6rem;
 }
-#s-main .container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+#s-main #swiper_nav {
+  position: absolute;
+  right: 0;
+  left: 0;
+  max-height: 73.6rem;
 }
-#s-main .container .d-left-mid {
-  display: flex;
-  gap: 17.4rem;
+#s-main #swiper_nav .d-left {
+  position: absolute;
+  z-index: 10;
 }
-#s-main .container .d-left-mid .d-left {
-  display: flex;
-}
-#s-main .container .d-left-mid .d-left ul {
+#s-main #swiper_nav ul {
   gap: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 }
-#s-main .container .d-left-mid .d-mid {
+#s-main .swiper_container {
+  z-index: 1;
+  height: 100%;
+  max-height: 73.6rem;
+  left: 0;
+  right: 0;
+  position: relative;
+}
+@media (max-width: 1100px) {
+  #s-main .swiper_container {
+    background-position-x: 40%;
+  }
+}
+@media (max-width: 722px) {
+  #s-main .swiper_container {
+    background-position-x: 30%;
+  }
+}
+#s-main #swiper_diablo4 {
+  background-image: url(../Image_Blizzard/bg-diablo4_1920.jpg);
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-size: cover;
+}
+@media (max-width: 1100px) {
+  #s-main #swiper_diablo4 {
+    background-position-x: 40%;
+  }
+}
+@media (max-width: 722px) {
+  #s-main #swiper_diablo4 {
+    background-position-x: 30%;
+  }
+}
+#s-main #swiper_hearthstone {
+  background-image: url(../Image_Blizzard/bg-Heartstone.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+@media (max-width: 1100px) {
+  #s-main #swiper_hearthstone h1 {
+    max-width: 51rem;
+  }
+}
+#s-main #swiper_wow {
+  background-image: url(../Image_Blizzard/bg-WoW.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+@media (max-width: 1100px) {
+  #s-main #swiper_wow {
+    background-position: center center;
+  }
+  #s-main #swiper_wow h1 {
+    width: 60rem;
+  }
+}
+@media (max-width: 722px) {
+  #s-main #swiper_wow h1 {
+    max-width: 33.5rem;
+  }
+}
+#s-main .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  padding-top: 9.6rem;
+}
+#s-main .container #d4_main {
+  padding: 0;
+}
+#s-main .container #hearthstone_main {
+  padding: 0;
+}
+#s-main .container .d-mid {
   max-width: 56.2rem;
   padding-bottom: 1.4rem;
+  margin-left: 17.4rem;
 }
-#s-main .container .d-left-mid .d-mid p {
+#s-main .container .d-mid p {
   padding-top: 1.6rem;
   padding-bottom: 3.2rem;
   font-weight: 400;
@@ -233,14 +425,27 @@ header .container ul #conta:hover span {
   line-height: 2.7rem;
   letter-spacing: -0.005em;
 }
-#s-main .container .d-left-mid .d-mid a {
-  padding: 14px 32px;
+#s-main .container .d-mid a {
+  padding: 1.4rem 3.2rem;
+  gap: 1.2rem;
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+}
+#s-main .container .d-mid a img {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  height: 100%;
 }
 #s-main .container .d-right {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+#s-main .container .d-right .big_icon {
+  max-width: 280px;
 }
 #s-main .container .d-right .trailer {
   display: flex;
@@ -257,12 +462,95 @@ header .container ul #conta:hover span {
 #s-main .container .d-right .trailer .trailer-thumb {
   display: flex;
   flex-direction: row-reverse;
+  position: relative;
+  box-shadow: 0px 20px 15px -5px rgba(0, 0, 0, 0.4);
 }
 #s-main .container .d-right .trailer .trailer-thumb button {
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
   background: none;
   border: none;
-  position: relative;
-  left: 16.6rem;
+  position: absolute;
+}
+#s-main .container .d-right .trailer .trailer-thumb button img {
+  margin: 0 auto;
+}
+#s-main .container .d-right .trailer .trailer-thumb button .b-hover {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.2s, opacity 0.3s linear;
+}
+#s-main .container .d-right .trailer .trailer-thumb .gifs {
+  width: 28rem;
+  min-height: 15.8rem;
+  position: absolute;
+  visibility: hidden;
+  transition: visibility 0.2s, opacity 0.3s linear;
+  opacity: 0;
+}
+#s-main .container .d-right .trailer .trailer-thumb:hover .gifs {
+  visibility: visible;
+  transition: visibility 0.3s, opacity 0.3s linear;
+  opacity: 1;
+}
+#s-main .container .d-right .trailer .trailer-thumb:hover .b-hover {
+  opacity: 1;
+  visibility: visible;
+  transition: visibility 0.3s, opacity 0.3s linear;
+}
+@media (max-width: 1100px) {
+  #s-main .d-left {
+    display: flex;
+    position: absolute;
+    bottom: 10.2rem;
+  }
+  #s-main .d-left ul {
+    gap: 2rem;
+    display: flex;
+    flex-direction: row !important;
+    justify-content: flex-end;
+  }
+  #s-main .d-mid {
+    margin-left: 0 !important;
+    height: 100%;
+    padding-top: 9.4rem;
+  }
+  #s-main .d-right {
+    position: absolute;
+    right: 0rem;
+    justify-content: space-between !important;
+    padding-bottom: 8.6rem;
+    padding-top: 3.2rem;
+    margin-right: 3rem;
+  }
+}
+@media (max-width: 722px) {
+  #s-main {
+    max-height: 62.5rem;
+  }
+  #s-main .container {
+    padding-top: 8rem;
+  }
+  #s-main #swiper_nav {
+    max-height: 62.5rem;
+  }
+  #s-main .d-left {
+    bottom: 6.2rem !important;
+  }
+  #s-main .d-mid {
+    padding-top: 5.1rem;
+  }
+  #s-main .d-mid h1 {
+    font-size: 4rem;
+    line-height: 110.2%;
+  }
+  #s-main .d-right img {
+    display: none;
+  }
+  #s-main .d-right span {
+    display: none;
+  }
 }
 
 #s-jogos #titulo-cards {
@@ -295,10 +583,29 @@ header .container ul #conta:hover span {
 #s-jogos #titulo-cards .ver_todos {
   display: flex;
   gap: 1rem;
+}
+#s-jogos #titulo-cards .ver_todos span {
   font-weight: 600;
   font-size: 1.6rem;
   line-height: 2.4rem;
   color: #00AEFF;
+}
+@media (max-width: 1100px) {
+  #s-jogos #titulo-cards .t-cards-left span {
+    display: none;
+  }
+}
+@media (max-width: 722px) {
+  #s-jogos #titulo-cards .t-cards-left {
+    width: auto;
+  }
+  #s-jogos #titulo-cards .t-cards-left ul {
+    display: none;
+  }
+  #s-jogos #titulo-cards .ver_todos span {
+    font-size: 14px;
+    line-height: 21px;
+  }
 }
 #s-jogos .cards {
   display: grid;
@@ -306,36 +613,268 @@ header .container ul #conta:hover span {
   gap: 2.8rem;
   padding-bottom: 7rem;
 }
+@media (max-width: 1270px) {
+  #s-jogos .cards {
+    grid-template-areas: "card-games card-games card-games";
+  }
+}
+@media (max-width: 722px) {
+  #s-jogos .cards {
+    grid-template-areas: "card-games card-games";
+    gap: 1.3rem;
+  }
+}
 
+#s-download {
+  background-image: url(../Image_Blizzard/background-section-download.png);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  overflow: hidden;
+}
 #s-download .container {
+  position: relative;
   display: flex;
+  align-items: center;
+  height: 85.2rem;
+  max-height: 85.2rem;
 }
 #s-download .container .left {
+  z-index: 99;
+  width: auto;
+  height: 100%;
+  max-width: 39.3rem;
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  padding-top: 132px;
 }
 #s-download .container .left img {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
 }
+#s-download .container .left h2 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+#s-download .container .left ul {
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
 #s-download .container .left ul li {
   display: flex;
+  align-items: flex-end;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 178.2%;
+  color: #828792;
+  gap: 16px;
+}
+#s-download .container .left a {
+  gap: 1rem;
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  margin-bottom: 4.9rem;
+  margin-top: 4.2rem;
+  padding: 14px 32px;
+}
+#s-download .container .left .d-app {
+  display: flex;
+  gap: 1.8rem;
+}
+#s-download .container .left .d-app p {
+  font-weight: 600;
+  font-size: 1.4rem;
+  line-height: 2.1rem;
+  color: #E5E5E5;
+  flex-direction: column;
+}
+#s-download .container .left .d-app p a {
+  font-weight: 600;
+  font-size: 1.4rem;
+  margin: 0;
+  padding: 0;
+  text-decoration: underline;
+  transition: 0.2s;
+}
+#s-download .container .left .d-app p a:hover {
+  color: #00AEFF;
+  transition: 0.3s;
 }
 #s-download .container .floats {
-  width: 100%;
   display: flex;
-  position: relative;
-  justify-content: flex-end;
-  flex-wrap: wrap;
+  align-items: center;
+  height: 85.2rem;
+  max-width: 105.5rem;
+  width: 100%;
+  position: absolute;
+  right: -27.5rem;
 }
 #s-download .container .floats img {
-  width: 100%;
-  position: relative;
-  overflow: hidden;
+  position: absolute;
 }
-#s-download .container .floats .float-2 {
-  align-self: flex-end;
-  overflow: hidden;
-  position: relative;
+#s-download .container .floats .img1 {
+  -webkit-animation: float 8s ease-in-out infinite;
+          animation: float 8s ease-in-out infinite;
+}
+#s-download .container .floats .img2 {
+  display: block;
+  -webkit-animation: float 6s ease-in-out infinite;
+          animation: float 6s ease-in-out infinite;
+  left: 29.3rem;
+  top: 436.5px;
+}
+@media (max-width: 1100px) {
+  #s-download .left {
+    max-width: 30.3rem !important;
+  }
+}
+@media (max-width: 1100px) and (max-width: 722px) {
+  #s-download .container {
+    min-height: 94.4rem;
+  }
+  #s-download .container .left {
+    padding-top: 6.3rem;
+  }
+  #s-download .floats {
+    right: 0 !important;
+    top: 330px;
+  }
+  #s-download .floats .img1 {
+    max-width: 52.882rem;
+  }
+  #s-download .floats .img2 {
+    max-width: 27.622rem;
+    left: 11.3rem !important;
+  }
+}
+
+@-webkit-keyframes float {
+  0% {
+    transform: translatey(-2rem);
+  }
+  50% {
+    transform: translateY(0rem);
+  }
+  100% {
+    transform: translatey(-2rem);
+  }
+}
+
+@keyframes float {
+  0% {
+    transform: translatey(-2rem);
+  }
+  50% {
+    transform: translateY(0rem);
+  }
+  100% {
+    transform: translatey(-2rem);
+  }
+}
+#jogos {
+  background: linear-gradient(180deg, #020203 0%, rgba(14, 17, 23, 0.92) 96.35%, rgba(14, 17, 23, 0.9) 100%);
+  -webkit-backdrop-filter: blur(6px);
+          backdrop-filter: blur(6px);
+  display: none;
+}
+#jogos ul {
+  padding-top: 7.2rem;
+  padding-bottom: 8.5rem;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 9.2rem 3.2rem;
+  width: 100%;
+}
+#jogos ul a {
+  max-width: 10.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+}
+#jogos ul a span {
+  color: #9D9D9D;
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 120%;
+}
+#jogos ul a img {
+  max-width: 7rem;
+  max-height: 7rem;
+}
+#jogos .d-down {
+  background-color: rgba(21, 23, 27, 0.7);
+}
+#jogos .d-down .container {
+  height: 7rem;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6.4rem;
+}
+#jogos .d-down .container a {
+  flex-direction: row;
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  max-width: none;
+  gap: 1rem;
+}
+#jogos .d-down .container a img {
+  width: auto;
+}
+#jogos .d-down .container .download_icon img {
+  min-width: 24px;
+}
+
+#esportes {
+  background: linear-gradient(180deg, #020203 0%, rgba(14, 17, 23, 0.92) 96.35%, rgba(14, 17, 23, 0.9) 100%);
+  -webkit-backdrop-filter: blur(6px);
+          backdrop-filter: blur(6px);
+  display: none;
+}
+#esportes ul {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 6.4rem;
+  padding-top: 5.5rem;
+  padding-bottom: 9.3rem;
+}
+#esportes ul a {
+  max-width: 17.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 0 auto;
+  gap: 2rem;
+}
+#esportes ul a span {
+  color: #9D9D9D;
+  font-weight: 500;
+  font-size: 1.4rem;
+  line-height: 120%;
+}
+#esportes .d-down {
+  background-color: rgba(21, 23, 27, 0.7);
+}
+#esportes .d-down .container {
+  display: flex;
+  padding: 0;
+  height: 7rem;
+  align-items: center;
+  justify-content: center;
+}
+#esportes .d-down .container a {
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  flex-direction: row;
+  max-width: none;
 }/*# sourceMappingURL=main.css.map */
