--- a/scss/_animation.scss
+++ b/scss/_animation.scss
@@ -9,3 +9,117 @@
         transform: translatey(-2rem);
     }
 }
+
+@keyframes progress {
+    0%{
+        width: 0%;
+    }
+    100%{
+        width: 100%;
+    }
+    
+}
+
+@keyframes seta {
+    from{
+        rotate:0deg ;
+        
+    }
+    to{
+        rotate:180deg;
+        filter: invert(52%) sepia(62%) saturate(3774%) hue-rotate(172deg) brightness(104%) contrast(106%);
+    }
+   
+}
+
+@keyframes setaOut {
+    from{
+        rotate:180deg;
+        
+    }
+    to{
+        rotate:0deg;
+        filter: none;
+    }
+}
+
+@keyframes menuJ {
+    from{
+        top: -64rem;
+    }
+    to{
+        top: 0;
+    }
+}
+@keyframes menuJOut {
+    from{
+        top: 0rem;
+    }
+    to{
+        top: -64rem;
+    }
+}
+
+@keyframes menuE {
+    from{
+        top: -52rem;
+    }
+    to{
+        top: 0rem;
+    }
+}
+
+@keyframes menuEOut {
+    from{
+        top: 0rem;
+    }
+    to{
+        top: -52rem;
+    }
+}
+
+@keyframes loginAn {
+    from{
+        opacity: 0;
+        
+
+        
+    }
+    to{
+        opacity: 1;
+        
+    }
+}
+
+@keyframes logoutAn {
+    from{
+        opacity: 1;
+    
+    }
+    to{
+        opacity: 0;
+    }
+}
+
+@keyframes loginContentAn {
+    from{
+        opacity: 0;
+        top: 8rem;
+
+        
+    }
+    to{
+        opacity: 1;
+        top: 0rem;
+    }
+}
+@keyframes logoutContentAn {
+    from{
+        opacity: 1;
+        top: 0rem;
+    }
+    to{
+        opacity: 0;
+        top: 8rem;
+    }
+}
