--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -3,15 +3,17 @@ header{
     height: 9.6rem;
     border-bottom:1.5px solid rgba($color: white, $alpha: 0.1);
     position: absolute;
-    z-index: 20;
+    z-index: 15;
     width: 100%;
     top: 0;
     left: 0;
-    
+
     
    
     
-    .container{
+    #logo_container{
+        position: relative;
+        z-index: 20;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -43,8 +45,9 @@ header{
             display: flex;
             
             
-            a{
+            button{
                 gap: 1.4rem;
+                display: flex;
                 img{
                     display: flex;
                     align-self: center;
@@ -52,6 +55,7 @@ header{
                     
                   
                 }
+               
             }
         }
         .right{
@@ -75,8 +79,10 @@ header{
                     
                 }
             }
+            
             #logar{
                 gap: 0.6rem;
+                height: 100%;
 
             }
         }
@@ -92,10 +98,7 @@ header{
             width: 8.6rem!important;
         }
         nav{
-           a{
-            display: none;
-             gap: 0rem;
-           }
+           display: none!important;
         }
         
     }
@@ -118,9 +121,14 @@ header{
 
 
 #s-main{
-    
+    position: relative;
     height: 73.6rem;
-    
+
+    .main{
+        height: 100%;
+        
+    }
+
     #swiper_nav{
         
         position: absolute;
@@ -140,7 +148,34 @@ header{
             display: flex;
             flex-direction: column;
             justify-content:flex-end ;
+            cursor: pointer;
+            .swiper-slide{
+                opacity: 0.4;
+                filter: grayscale(100%);
+
+            }
+            .swiper-slide-thumb-active {
+                opacity: 1;
+                filter: grayscale(0%);
+                
+              }
         }
+        
+        
+
+
+    }
+    .slide-progress-bar{
+        span{
+            height: 2px;
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            background-color: #00AEFF;
+            animation: progress 4500ms  linear ;
+        }
+            
+
     }
     .swiper_container{
         z-index: 1;
@@ -161,6 +196,12 @@ header{
     }
        
     }
+    .swiper{
+        height: 100%;
+    }
+    
+    
+
     #swiper_diablo4{
         background-image: url(../Image_Blizzard/bg-diablo4_1920.jpg);
         background-repeat: no-repeat;
@@ -194,6 +235,9 @@ header{
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover; 
+        h1{
+            width: 600px;
+        }
         @media (max-width:1100px) {
             background-position: center center;
             h1{
@@ -281,6 +325,7 @@ header{
                 background: none;
                 border: none;
                 position: absolute;
+                display: block;
                 img{
                     margin: 0 auto;
                     
@@ -303,10 +348,7 @@ header{
             }
 
             &:hover{
-                .thumb{
-                    
-                    
-                }
+                
                 .gifs{
                     visibility: visible;
                     transition: visibility 0.3s, opacity 0.3s linear;
@@ -332,13 +374,19 @@ header{
                 display: flex;
                 position: absolute;
                 bottom: 10.2rem;
+                max-width: 30rem;
+                align-items: center;
+                justify-content: center;
+                left: 11rem;
+                
                 
                 ul{
                     gap: 2rem;
                     display: flex;
                     flex-direction: row!important;
                     
-                    justify-content:flex-end ;
+                    justify-content:center;
+                    
                 }
             }
         
@@ -365,9 +413,19 @@ header{
         }
         #swiper_nav{
             max-height: 62.5rem; 
+            
         }
         .d-left{
             bottom: 6.2rem!important;
+            max-width: 34.3rem;
+            
+            left: 1.2rem;
+            ul{
+                
+                li{
+                    max-width: min-content;
+                }
+            }
         }
         
         .d-mid{
@@ -461,7 +519,7 @@ header{
         
         display: grid;
         grid-template-areas: 'card-games card-games card-games card-games';
-        gap: 2.8rem;
+        justify-content: space-between;
         padding-bottom: calc(10.7rem - 3.7rem);
         
         @media (max-width:1270px) {
@@ -521,6 +579,10 @@ header{
                     color: #828792;
                     gap: 16px;
                     
+                    img{
+                        display: block;
+                        margin: auto 0;
+                    }
                 }
                 
             }
@@ -614,3 +676,77 @@ header{
         }
     }
     }
+
+.login{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transition: all 0.4s;
+    z-index: 99;
+    visibility: hidden;
+    height: 100%;
+    
+    .login_content{
+        width: 69.8rem;
+        height: 60rem;
+        background-image: url(../Image_Blizzard/bg_logar.png);
+        background-position: left left;
+        background-size: cover;
+        background-color: black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        button{
+            position: absolute;
+            top: 16px;
+            right: 16px;
+        }
+        img{
+            margin: 0 auto;
+        }
+        .bn_Logo{
+            padding-bottom: 4rem;
+        }
+        #conect{
+            margin-top: 0.8rem;
+            width: 42.6rem;
+            justify-content: center;
+            transition: 0s;
+        }
+        p{
+            padding-top: 4.1rem;
+            padding-bottom: 1.6rem;
+            font-size: 1.6rem;
+            line-height: 2.4rem;
+            font-weight: 500;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            width: 100%;
+           
+            &:first-of-type{
+                
+                font-size: 1.4rem;
+                line-height: 2.1rem;
+            }
+        }
+        
+
+        .login_a{
+            font-size: 1.6rem;
+            line-height: 2.4rem;  
+            text-decoration: underline;
+            color: #00AEFF;
+            
+        }
+
+    }
+}
