--- a/scss/_pattern.scss
+++ b/scss/_pattern.scss
@@ -54,6 +54,13 @@ a{
     font-size: 1.4rem;
     line-height: 2.1rem;
 }
+button{
+    display: flex;
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 2.1rem;
+
+}
 
 .botao{
     width: fit-content;
@@ -69,7 +76,21 @@ a{
         
     }
 }
-.card-games{
+
+input{
+    height: 4.8rem;
+    width: 42.6rem;
+    font-weight: 500;
+    font-size: 1.5rem;
+    line-height: 2.2rem;
+    color: #363842;
+    border-radius: 0.4rem;
+    padding-left: 1.6rem;
+    margin-bottom: 1.6rem;
+    border: 0;
+}
+
+.card-games{    
     width: 100%;
     max-width: 30.1rem;
     padding-bottom: 3.7rem;
@@ -170,13 +191,13 @@ a{
         }
     }
     @media (max-width:1100px){
-        
+        max-width: 20.2rem;
         min-width: 20.1rem;
         .last-card{
             min-width: 20.1rem;
             
-            max-width: 21.7rem;
-            max-height: 29.8rem;
+            max-width: 20.1rem;
+            max-height: 27.7rem;
             
         }
     }
